# modern-gl-samples

./: .gitignore  CMakeLists.txt  README.md  chapter_1.pro
chapter1/: CMakeLists.txt
chapter1/01/: main.cpp
chapter1/01_minimal/: CMakeLists.txt  main.cpp  minimal.pro  utils.cpp  utils.h
chapter1/02/: IColorGenerator.h  RandomColorGenerator.h  main.cpp
chapter1/02_tesselation/: CMakeLists.txt  Tesselator.cpp  Tesselator.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp  primitives.pro
chapter1/03/: GearsScene.cpp  GearsScene.h  GearsShaderProgram.cpp  GearsShaderProgram.h  GearsTesselator.cpp  GearsTesselator.h  Tesselator.cpp  Tesselator.h  main.cpp
chapter1/04/: MainScene.cpp  MainScene.h  Mesh.h  MeshUtils.cpp  MeshUtils.h  MovementController.cpp  MovementController.h  TexturedShape.h  main.cpp
chapter1/res/04/: Spaceship License.txt  main.frag  main.vert
chapter1/shared/: Application.cpp  Application.h  AssetLoader.cpp  AssetLoader.h  Enumerations.h  IScene.h  IShaderProgram.h  RenderStates.cpp  RenderStates.h  ShaderProgram.cpp  ShaderProgram.h  UniformValue.h
libs/libmath/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  CommonMath.cpp  CommonMath.h  FloatRect.cpp  FloatRect.h  Math.h  Transform2D.cpp  Transform2D.h  libmath.pro
libs/libplatform/: CMakeLists.txt  DebugTools.cpp  DebugTools.h  EventLoop.cpp  EventLoop.h  Filesystem.cpp  Filesystem.h  MouseGrabber.cpp  MouseGrabber.h  OpenGL.cpp  OpenGL.h  Timer.h  libplatform.pro  ps_opengl.cpp  ps_opengl.h  ps_sdl.cpp  ps_sdl.h  sdlcpp.cpp  sdlcpp.h  sdlcpp_detail.cpp  sdlcpp_detail.h  type_aliases.h
libs/libplatform/detail/: OpenGL_detail.cpp  OpenGL_detail.h  ps_opengl_detail.cpp  ps_opengl_detail.h  ps_sdl_detail.cpp  ps_sdl_detail.h
libs/libshade/: CMakeLists.txt  Enumerations.h  IProgram.h  Program.cpp  Program.h  UniformVariable.cpp  UniformVariable.h  VertexAttribute.cpp  VertexAttribute.h  libshade.pro
libwindow/: OpenGLContext.cpp  OpenGLContext.h  SDL_RAII.cpp  SDL_RAII.h  Window.h  libwindow.pro
minimal/: main.cpp  minimal.pro  utils.cpp  utils.h
primitives/: primitives.pro
scripts/: add_gl_example.cmake  functions.cmake  use-msvc-static-runtime.cmake
tests/: CMakeLists.txt
tests/libmathtests/: CMakeLists.txt  FloatRect_tests.cpp
